# electron-imagemin-tools

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.ps1  code-review.md  main.js  mimocode.json  package-lock.json  package.json  preload.js  test.ps1
crates/core/: Cargo.toml
crates/core/src/: compress.rs  config.rs  history.rs  lib.rs
crates/core/tests/: integration.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: app.rs  main.rs  theme.rs  util.rs
crates/ui/src/views/: drop_zone.rs  emoji_test.rs  error_log.rs  header.rs  history.rs  mod.rs  modal.rs  progress.rs  result_table.rs  settings.rs  stack.rs  toast.rs
cvooc-imagemin-compressor/: Cargo.toml
cvooc-imagemin-compressor/crates/core/: Cargo.toml
cvooc-imagemin-compressor/crates/core/src/: compress.rs  config.rs  lib.rs
cvooc-imagemin-compressor/crates/ui/: Cargo.toml
cvooc-imagemin-compressor/crates/ui/src/: app.rs  main.rs
www/: index.html
www/js/: index.js
