[package]
name = "imagemin-core"
version.workspace = true
edition.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
oxipng = "9"
mozjpeg = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = "0.4"
thiserror = "2"
rayon = "1"
imagequant = "4.4.1"
png = "0.18.1"
rgb = "0.8.53"
gif = "0.13"
resvg = "0.43"
usvg = "0.43"
tiny-skia = "0.11"
ravif = "0.8"
webp = "0.3"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3"
